fixed some spacing, fixed validation errors, added link properties for dead link in footer for color palette

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1.uppercase {
 
 h2 {
     color: #000;
-    background-color: rgb(201, 24, 24);
+    background-color: #cd0702;
     font-family: courier, verdana, sans-serif;
     font-size: 35px;
     text-align: center;
@@ -96,6 +96,20 @@ footer {
     text-align: center;
     border: 1px solid #333;
     bottom: 0px;
+}
+footer a:link {
+    color: #f04937;
+    text-decoration: none;
+}
+footer a:visited {
+    color: inherit;
+    font-size: 22.5px;
+    text-decoration: none;
+}
+footer a:hover {
+    color: #f04937;
+    text-decoration: underline;
+    font-style: normal;
 }
 
 /*Image Divs*/
@@ -160,9 +174,15 @@ div.intro {
     margin-top: 90px;
     margin-bottom: 90px;
     text-align: center;
-    height: 250px;
     line-height: 1.6em;
     font-size: 20px;
+    white-space: normal;
+    text-shadow: 3px 3px 1px #000;
+    background-color: rgba(0, 0, 0, .75);
+    border-radius: 15px;
+    color: #fff;
+    font-family: courier, verdana, sans-serif;
+    letter-spacing: 2.1px;
 }
 div.center {
     margin: 0 auto;
@@ -236,6 +256,7 @@ ul.songlist {
 .albums dl {
     font-size: 20px;
     line-height: 1.6em;
+    padding: 30px 0px;
     width: 80%;
     display: inline-block;
 }
